--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router": "^7.6.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
+    "three": "^0.177.0",
     "vite-plugin-mdx": "^3.6.1"
   },
   "devDependencies": {
