--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mediapipe/camera_utils": "^0.3.1675466862",
     "@mediapipe/hands": "^0.4.1675469240",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
@@ -30,7 +31,6 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
     "three": "^0.177.0",
-    "vite-plugin-mdx": "^3.6.1",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
